# skon-vision-ai

./: CLAUDE.md  prompt.txt  pyproject.toml
chapter 01. Vision AI 소개 및 CNN 핵심 이론/: 01_Vision_AI_소개.md  02_CNN_핵심_이론.md
chapter 02. Vision AI Task별 주요 Loss, Metric 이론/: 01_주요_Loss_Metric_이론.md
chapter 03. Shallow CNN 모델 및 학습 Loop 구현/: 01_Shallow_CNN_실습.ipynb
chapter 04. 추론 및 Wrap-up/: 01_추론_실습.ipynb  02_Wrap_up.md
chapter 11. 데이터 불균형 해소/: 01_데이터_불균형_해소.md
chapter 12. 성능을 높히는 라벨링 가이드라인/: 01_라벨링_가이드라인.md
chapter 12. 성능을 높히는 라벨링 가이드라인/images/detection/: generate_images.py
