[project]
name = "skon-vision-ai"
version = "0.1.0"
description = "Vision AI 교육 실습 환경"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "pillow",
    "ipycanvas",
    "ipywidgets",
    "jupyterlab",
    "notebook",
]

[tool.uv]
# PyTorch CUDA 12.1 버전을 명시적으로 설치하기 위한 설정
# https://download.pytorch.org/whl/cu121

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
